# sudoku-rs

./: Cargo.toml  LICENSE  README.md
sudoku-cli/: Cargo.toml
sudoku-cli/src/: commands.rs  main.rs
sudoku-engine/: Cargo.toml
sudoku-engine/examples/: sudoku.rs
sudoku-engine/src/: lib.rs
