[workspace]
members = [
    "sudoku-cli",
    "sudoku-engine"
]
default-members = ["sudoku-cli"]
resolver = "2"

[workspace.package]
authors = ["rustedmoon <rustedmoon@proton.me>"]
homepage = "https://github.com/rustedmoon/sudoku-rs"
repository = "https://github.com/rustedmoon/sudoku-rs.git"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1